[project]
name = "Surveys"
version = "1.0.0"
description = "Aplicativo de Pesquisas"
authors = [
    {name = "mades eladrian", email = "mades.eladrian@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
]
