[project]
name = "Surveys"
version = "1.0.0"
description = "Aplicativo de Pesquisas"
authors = [
    {name = "mades eladrian", email = "mades.eladrian@gmail.com"},
]
dependencies = [
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.3.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
    "mypy>=0.982",
    "flake8>=5.0.4",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pydocstyle>=6.1.1",
    "faker>=15.1.3",
    "pytest-mock-resources>=2.6.3",
    "mongomock>=4.1.2",
]
