[project]
name = "Surveys"
version = "1.0.0"
description = "Aplicativo de Pesquisas"
authors = [
    {name = "mades eladrian", email = "mades.eladrian@gmail.com"},
]
dependencies = [
    "email-validator>=1.3.0",
    "fastapi[all]>=0.87.0",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.3.2",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.19.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "faker>=15.1.3",
    "flake8>=5.0.4",
    "mongomock>=4.1.2",
    "mypy>=0.982",
    "pre-commit>=2.20.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
]